# api/swagger.yaml
@@ -4,13 +4,13 @@ info:
   description: "Modelo de API para transações da Saque e Pague. O parceiro interessado\
     \ deve implementar as operações desejadas para que a SeP consiga se comunicar\
     \ com o mesmo."
-  version: "1.25.1"
+  version: "1.25.2"
   title: "Saque e Pague Transacional"
   contact:
     name: "Time Saque e Pague"
     url: "http://www.saqueepague.com.br"
 host: "api-saqueepague.sensedia.com"
-basePath: "/saqueepague/SepTransaction/1.25.1"
+basePath: "/saqueepague/SepTransaction/1.25.2"
 tags:
 - name: "Deposito com Cartao"
   description: "Transações necessárias para efetuar um Depósito com Cartão."
@@ -47,9 +47,6 @@ tags:
     \ Digital."
 - name: "Transferencia com Cartao"
   description: "Transações necessárias para efetuar uma Transferência com Cartão."
-- name: "Transferencia com Cartao em Dinheiro"
-  description: "Transações necessárias para efetuar uma Transferência com Cartão depositando\
-    \ um valor em dinheiro."
 - name: "Transferencia sem Cartao"
   description: "Transações necessárias para efetuar uma Transferência sem Cartão."
 - name: "Titulos de Capitalizacao"
@@ -203,6 +200,7 @@ paths:
       tags:
       - "Deposito sem Cartao"
       - "Deposito via Carteira Digital"
+      - "Transferencia com Cartao"
       - "Transferencia sem Cartao"
       - "Default"
       description: "Operação de consulta de conta de favorecido, usada previamente\
@@ -393,54 +391,6 @@ paths:
         401:
           description: "Acesso não autorizado."
       x-swagger-router-controller: "EmprestimoComCartao"
-  /consultaFavorecido:
-    post:
-      tags:
-      - "Transferencia com Cartao"
-      - "Transferencia com Cartao em Dinheiro"
-      - "Default"
-      description: "Operação de consulta de condições disponíveis de parcelamento\
-        \ do empréstimo."
-      operationId: "consultaFavorecidoPOST"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "authenticationType"
-        in: "header"
-        description: "Tipo de autenticação requerida."
-        required: true
-        type: "string"
-        x-example: "auth2"
-      - name: "clientId"
-        in: "header"
-        description: "Identificação do cliente."
-        required: true
-        type: "string"
-        x-example: "prd-client"
-      - name: "token"
-        in: "header"
-        description: "Chave para validação do acesso ao serviço."
-        required: true
-        type: "string"
-        x-example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOjYsInByb2ZpbGUiOltdLCJpYXQiOjE0OTkwOsY4NDV9.uR5WH3c2ZztGmZVCfcJPu-1ix1w-j7shJw_X_ZlFfAo"
-      - in: "body"
-        name: "body"
-        description: "Requisição de consulta parcelas de empréstimo."
-        required: true
-        schema:
-          $ref: "#/definitions/consultaFavorecidoReq"
-      responses:
-        200:
-          description: "Retorno com sucesso ou com Erro de negócio."
-          schema:
-            $ref: "#/definitions/consultaFavorecidoResp"
-        400:
-          description: "Bad Request ou Erro interno ao qual inviabilizou uma resposta."
-        401:
-          description: "Acesso não autorizado."
-      x-swagger-router-controller: "TransferenciaComCartao"
   /consultaPrePago:
     post:
       tags:
@@ -541,8 +491,9 @@ paths:
       tags:
       - "Saque sem Cartao"
       - "Default"
-      description: "Operação de consulta para saque. Efetuada para autenticar cliente,\
-        \ retornando valorde saque, moeda e dados adicionais."
+      description: "Operação de consulta para saque de moeda estrangeira (câmbio).\
+        \ Efetuada para autenticar cliente, retornando valorde saque, moeda e dados\
+        \ adicionais."
       operationId: "consultaSaquePOST"
       consumes:
       - "application/json"
@@ -1104,7 +1055,6 @@ paths:
       - "Emprestimo com Cartao"
       - "Pagamento com Cartao"
       - "Transferencia com Cartao"
-      - "Transferencia com Cartao em Dinheiro"
       - "Default"
       description: "Operação de identificação do cliente e informações adicionais\
         \ de sua conta."
@@ -1628,7 +1578,6 @@ paths:
       - "Saque via Carteira Digital"
       - "Transferencia com Cartao"
       - "Transferencia sem Cartao"
-      - "Transferencia com Cartao em Dinheiro"
       - "Titulos de Capitalizacao"
       operationId: "tokenPOST"
       consumes:
@@ -1666,7 +1615,6 @@ paths:
       - "Default"
       - "Transferencia com Cartao"
       - "Transferencia sem Cartao"
-      - "Transferencia com Cartao em Dinheiro"
       description: "Operação de transferência entre contas."
       operationId: "transferenciaPOST"
       consumes:
@@ -1714,7 +1662,6 @@ paths:
       - "Default"
       - "Transferencia com Cartao"
       - "Transferencia sem Cartao"
-      - "Transferencia com Cartao em Dinheiro"
       description: "Confirmação de operação de transferência."
       operationId: "transferenciaConfPOST"
       consumes:
@@ -2080,71 +2027,6 @@ definitions:
         codEstab: "000000000742673"
         tipo: "008"
         id: "05100004"
-  consultaFavorecidoReq:
-    type: "object"
-    required:
-    - "Cartao"
-    - "InfTransacao"
-    - "Terminal"
-    properties:
-      InfTransacao:
-        $ref: "#/definitions/infTransacaoReq"
-      Cartao:
-        $ref: "#/definitions/cartao"
-      Terminal:
-        $ref: "#/definitions/terminal"
-  consultaFavorecidoResp:
-    type: "object"
-    required:
-    - "InfConsultaFavorecido"
-    - "InfTransacao"
-    - "Terminal"
-    properties:
-      Cripto:
-        $ref: "#/definitions/criptoResp"
-      InfTransacao:
-        $ref: "#/definitions/infTransacaoResp"
-      InfConsultaFavorecido:
-        $ref: "#/definitions/infConsultaFavorecidoResp"
-      Terminal:
-        $ref: "#/definitions/terminal"
-    example:
-      InfTransacao:
-        cdProc: "029100"
-        mensagemCliente: "Esta &eacute; uma mensagem para exibi&ccedil;&atilde;o em\
-          \ tela."
-        nsu: "000080247206"
-        codMoeda: "986"
-        codOperadora: "00000000914"
-        dataLocal: "1122"
-        errorMessage: ""
-        valor: "5000"
-        horaLocal: "151032"
-        nsuResposta: "820"
-        dataHora: "1122151032"
-      Cripto:
-        hash: "hash"
-      Terminal:
-        codEstab: "000000000742673"
-        tipo: "008"
-        id: "05100004"
-      InfConsultaFavorecido:
-        nomeCliente: "Carl Edward Sagan"
-        favorecidos:
-        - numAgencia: "4029"
-          numConta: "0082348296"
-          nomeBanco: "BRADESCO"
-          cpf: "02358422785"
-          tipoConta: "CC"
-          codBanco: "237"
-          nomeTitularConta: "Carl Edward Sagan"
-        - numAgencia: "4029"
-          numConta: "0082348296"
-          nomeBanco: "BRADESCO"
-          cpf: "02358422785"
-          tipoConta: "CC"
-          codBanco: "237"
-          nomeTitularConta: "Carl Edward Sagan"
   recargaPrePagoReq:
     type: "object"
     required:
@@ -2937,7 +2819,6 @@ definitions:
     example:
       InfIdentificacao:
         pedirToken: "01"
-        valorLimiteFavorecido: "000000030000"
         frase: "Informe o token gerado em seu app:"
         numAgencia: "4029"
         perguntas:
@@ -3367,87 +3248,6 @@ definitions:
         ultimoVencimento: "20200928"
         iofAdicional: "0809445"
         primeiroVencimento: "20200928"
-  infConsultaFavorecidoResp:
-    type: "object"
-    properties:
-      nomeCliente:
-        type: "string"
-        example: "Carl Edward Sagan"
-        description: "Nome do cliente titular da conta."
-      favorecidos:
-        type: "array"
-        description: "Lista de favorecidos cadastrados no parceiro."
-        items:
-          $ref: "#/definitions/favorecidoListaObj"
-    description: "Informações da resposta da requisição de consulta de condições de\
-      \ parcelamento de empréstimo."
-    example:
-      nomeCliente: "Carl Edward Sagan"
-      favorecidos:
-      - numAgencia: "4029"
-        numConta: "0082348296"
-        nomeBanco: "BRADESCO"
-        cpf: "02358422785"
-        tipoConta: "CC"
-        codBanco: "237"
-        nomeTitularConta: "Carl Edward Sagan"
-      - numAgencia: "4029"
-        numConta: "0082348296"
-        nomeBanco: "BRADESCO"
-        cpf: "02358422785"
-        tipoConta: "CC"
-        codBanco: "237"
-        nomeTitularConta: "Carl Edward Sagan"
-  favorecidoListaObj:
-    type: "object"
-    properties:
-      codBanco:
-        type: "string"
-        example: "237"
-        description: "Código do banco do Favorecido Cadastrado (3 dígitos)."
-        pattern: "^\\d{3}$"
-      nomeBanco:
-        type: "string"
-        example: "BRADESCO"
-        description: "Nome do Banco Favorecido Cadastrado (sem acento)."
-      numAgencia:
-        type: "string"
-        example: "4029"
-        description: "Número da agência do Favorecido Cadastrado."
-        pattern: "^\\d+$"
-      numConta:
-        type: "string"
-        example: "0082348296"
-        description: "Número da conta do Favorecido Cadastrado."
-        pattern: "^\\d+$"
-      tipoConta:
-        type: "string"
-        example: "CC"
-        description: "Tipo de conta do extrato do Favorecido Cadastrado (CC = conta\
-          \ corrente, CP = conta poupança)."
-        enum:
-        - "CC"
-        - "CP"
-      nomeTitularConta:
-        type: "string"
-        example: "Carl Edward Sagan"
-        description: "Nome do titular da conta."
-      cpf:
-        type: "string"
-        example: "02358422785"
-        description: "Número do CPF ou CNPJ do Favorecido Cadastrado (11 dígitos ou\
-          \ 14 dígitos, respectivamente)."
-        pattern: "^\\d{14}|\\d{11}$"
-    description: "Informações sobre cada favorecido. (Manter o campo VAZIO, por compatibilidade,\
-      \ caso não exista informação)."
-    example:
-      numAgencia: "4029"
-      numConta: "0082348296"
-      nomeBanco: "BRADESCO"
-      cpf: "02358422785"
-      tipoConta: "CC"
-      codBanco: "237"
-      nomeTitularConta: "Carl Edward Sagan"
   infRecargaPrePagoReq:
     type: "object"
     required:
@@ -4492,19 +4292,11 @@ definitions:
         description: "Códigos de processamento das transações habilitadas para o cliente\
           \ concatenados (6 dígitos cada código)."
         pattern: "^(?:\\d{6})*$"
-      valorLimiteFavorecido:
-        type: "string"
-        example: "000000030000"
-        description: "Valor de limite para a TED (12 dígitos, incluindo centavos).\
-          \ Quando ultrapassar esse valor retornado pelo parceiro, devemos enviar\
-          \ a transação /consultaFavorecido."
-        pattern: "^\\d{12}$"
     description: "Informações da resposta da requisição de identificação. Contém informaç\
       ões de como o usuário deve se identificar durante alguma futura transação. Usuá\
       rio pode usar uma pergunta, token ou senha de sílabas."
     example:
       pedirToken: "01"
-      valorLimiteFavorecido: "000000030000"
       frase: "Informe o token gerado em seu app:"
       numAgencia: "4029"
       perguntas:
