# controllers/Default.js
@@ -59,20 +59,6 @@ module.exports.consultaContaPOST = function consultaContaPOST (req, res, next) {
     });
 };
 
-module.exports.consultaFavorecidoPOST = function consultaFavorecidoPOST (req, res, next) {
-  var authenticationType = req.swagger.params['authenticationType'].value;
-  var clientId = req.swagger.params['clientId'].value;
-  var token = req.swagger.params['token'].value;
-  var body = req.swagger.params['body'].value;
-  Default.consultaFavorecidoPOST(authenticationType,clientId,token,body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
 module.exports.consultaLimitesEmprestimoPOST = function consultaLimitesEmprestimoPOST (req, res, next) {
   var authenticationType = req.swagger.params['authenticationType'].value;
   var clientId = req.swagger.params['clientId'].value;
