# controllers/TransferenciaComCartao.js
@@ -3,12 +3,12 @@
 var utils = require('../utils/writer.js');
 var TransferenciaComCartao = require('../service/TransferenciaComCartaoService');
 
-module.exports.consultaFavorecidoPOST = function consultaFavorecidoPOST (req, res, next) {
+module.exports.consultaContaPOST = function consultaContaPOST (req, res, next) {
   var authenticationType = req.swagger.params['authenticationType'].value;
   var clientId = req.swagger.params['clientId'].value;
   var token = req.swagger.params['token'].value;
   var body = req.swagger.params['body'].value;
-  TransferenciaComCartao.consultaFavorecidoPOST(authenticationType,clientId,token,body)
+  TransferenciaComCartao.consultaContaPOST(authenticationType,clientId,token,body)
     .then(function (response) {
       utils.writeJson(res, response);
     })
