# controllers/TransferenciaComCartaoEmDinheiro.js
@@ -1,73 +1,0 @@
-'use strict';
-
-var utils = require('../utils/writer.js');
-var TransferenciaComCartaoEmDinheiro = require('../service/TransferenciaComCartaoEmDinheiroService');
-
-module.exports.consultaFavorecidoPOST = function consultaFavorecidoPOST (req, res, next) {
-  var authenticationType = req.swagger.params['authenticationType'].value;
-  var clientId = req.swagger.params['clientId'].value;
-  var token = req.swagger.params['token'].value;
-  var body = req.swagger.params['body'].value;
-  TransferenciaComCartaoEmDinheiro.consultaFavorecidoPOST(authenticationType,clientId,token,body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.identificacaoPOST = function identificacaoPOST (req, res, next) {
-  var authenticationType = req.swagger.params['authenticationType'].value;
-  var clientId = req.swagger.params['clientId'].value;
-  var token = req.swagger.params['token'].value;
-  var body = req.swagger.params['body'].value;
-  TransferenciaComCartaoEmDinheiro.identificacaoPOST(authenticationType,clientId,token,body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.tokenPOST = function tokenPOST (req, res, next) {
-  var authenticationType = req.swagger.params['authenticationType'].value;
-  var clientId = req.swagger.params['clientId'].value;
-  var clientSecret = req.swagger.params['clientSecret'].value;
-  TransferenciaComCartaoEmDinheiro.tokenPOST(authenticationType,clientId,clientSecret)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.transferenciaConfPOST = function transferenciaConfPOST (req, res, next) {
-  var authenticationType = req.swagger.params['authenticationType'].value;
-  var clientId = req.swagger.params['clientId'].value;
-  var token = req.swagger.params['token'].value;
-  var body = req.swagger.params['body'].value;
-  TransferenciaComCartaoEmDinheiro.transferenciaConfPOST(authenticationType,clientId,token,body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.transferenciaPOST = function transferenciaPOST (req, res, next) {
-  var authenticationType = req.swagger.params['authenticationType'].value;
-  var clientId = req.swagger.params['clientId'].value;
-  var token = req.swagger.params['token'].value;
-  var body = req.swagger.params['body'].value;
-  TransferenciaComCartaoEmDinheiro.transferenciaPOST(authenticationType,clientId,token,body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
