# service/TransferenciaComCartaoEmDinheiroService.js
@@ -1,241 +1,0 @@
-'use strict';
-
-
-/**
- * Operação de consulta de condições disponíveis de parcelamento do empréstimo.
- *
- * authenticationType String Tipo de autenticação requerida.
- * clientId String Identificação do cliente.
- * token String Chave para validação do acesso ao serviço.
- * body ConsultaFavorecidoReq Requisição de consulta parcelas de empréstimo.
- * returns consultaFavorecidoResp
- **/
-exports.consultaFavorecidoPOST = function(authenticationType,clientId,token,body) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "InfTransacao" : {
-    "cdProc" : "029100",
-    "mensagemCliente" : "Esta &eacute; uma mensagem para exibi&ccedil;&atilde;o em tela.",
-    "nsu" : "000080247206",
-    "codMoeda" : "986",
-    "codOperadora" : "00000000914",
-    "dataLocal" : "1122",
-    "errorMessage" : "",
-    "valor" : "5000",
-    "horaLocal" : "151032",
-    "nsuResposta" : "820",
-    "dataHora" : "1122151032"
-  },
-  "Cripto" : {
-    "hash" : "hash"
-  },
-  "Terminal" : {
-    "codEstab" : "000000000742673",
-    "tipo" : "008",
-    "id" : "05100004"
-  },
-  "InfConsultaFavorecido" : {
-    "nomeCliente" : "Carl Edward Sagan",
-    "favorecidos" : [ {
-      "numAgencia" : "4029",
-      "numConta" : "0082348296",
-      "nomeBanco" : "BRADESCO",
-      "cpf" : "02358422785",
-      "tipoConta" : "CC",
-      "codBanco" : "237",
-      "nomeTitularConta" : "Carl Edward Sagan"
-    }, {
-      "numAgencia" : "4029",
-      "numConta" : "0082348296",
-      "nomeBanco" : "BRADESCO",
-      "cpf" : "02358422785",
-      "tipoConta" : "CC",
-      "codBanco" : "237",
-      "nomeTitularConta" : "Carl Edward Sagan"
-    } ]
-  }
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
-
-/**
- * Operação de identificação do cliente e informações adicionais de sua conta.
- *
- * authenticationType String Tipo de autenticação requerida.
- * clientId String Identificação do cliente.
- * token String Chave para validação do acesso ao serviço.
- * body IdentificacaoReq Requisição de identificação.
- * returns identificacaoResp
- **/
-exports.identificacaoPOST = function(authenticationType,clientId,token,body) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "InfIdentificacao" : {
-    "pedirToken" : "01",
-    "valorLimiteFavorecido" : "000000030000",
-    "frase" : "Informe o token gerado em seu app:",
-    "numAgencia" : "4029",
-    "perguntas" : [ {
-      "pergunta" : "Qual é o dia de seu aniversário?",
-      "tamResposta" : "2",
-      "id" : "1"
-    }, {
-      "pergunta" : "Qual é o dia de seu aniversário?",
-      "tamResposta" : "2",
-      "id" : "1"
-    } ],
-    "idPositiva" : [ {
-      "pos8" : "4E-8G-1P",
-      "idTela" : "1",
-      "pos4" : "P1-G8-E4",
-      "pos5" : "REG SOS",
-      "pos6" : "EN/UQ/AM",
-      "pos7" : "69 05 41",
-      "pos1" : "SOS GER",
-      "pos2" : "MA/QU/NE",
-      "pos3" : "14 50 96"
-    }, {
-      "pos8" : "4E-8G-1P",
-      "idTela" : "1",
-      "pos4" : "P1-G8-E4",
-      "pos5" : "REG SOS",
-      "pos6" : "EN/UQ/AM",
-      "pos7" : "69 05 41",
-      "pos1" : "SOS GER",
-      "pos2" : "MA/QU/NE",
-      "pos3" : "14 50 96"
-    } ],
-    "numConta" : "0082348296",
-    "transacValidas" : "068101068010",
-    "saldo" : "000000005000"
-  },
-  "InfTransacao" : {
-    "cdProc" : "029100",
-    "mensagemCliente" : "Esta &eacute; uma mensagem para exibi&ccedil;&atilde;o em tela.",
-    "nsu" : "000080247206",
-    "codMoeda" : "986",
-    "codOperadora" : "00000000914",
-    "dataLocal" : "1122",
-    "errorMessage" : "",
-    "valor" : "5000",
-    "horaLocal" : "151032",
-    "nsuResposta" : "820",
-    "dataHora" : "1122151032"
-  },
-  "Cripto" : {
-    "hash" : "hash"
-  },
-  "Terminal" : {
-    "codEstab" : "000000000742673",
-    "tipo" : "008",
-    "id" : "05100004"
-  }
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
-
-/**
- *
- * authenticationType String Tipo de autenticação requerida.
- * clientId String Identificação do cliente.
- * clientSecret String Cliente Secret.
- * returns infTokenResp
- **/
-exports.tokenPOST = function(authenticationType,clientId,clientSecret) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "access_token" : "847c2530-9819-434b-82fb-a9058a1ec957",
-  "token_type" : "bearer"
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
-
-/**
- * Confirmação de operação de transferência.
- *
- * authenticationType String Tipo de autenticação requerida.
- * clientId String Identificação do cliente.
- * token String Chave para validação do acesso ao serviço.
- * body TransacConf Requisição de confirmação de operação de transferência.
- * no response value expected for this operation
- **/
-exports.transferenciaConfPOST = function(authenticationType,clientId,token,body) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
- * Operação de transferência entre contas.
- *
- * authenticationType String Tipo de autenticação requerida.
- * clientId String Identificação do cliente.
- * token String Chave para validação do acesso ao serviço.
- * body TransferenciaReq Requisição de operação de transferência.
- * returns transferenciaResp
- **/
-exports.transferenciaPOST = function(authenticationType,clientId,token,body) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "Inftransferencia" : {
-    "recibo" : "          COMPROVANTE DE TRANSFERENCIA          @           TRANSFERENCIA ENTRE CONTAS           @ORIGEM: CONTA CORRENTE - 123/1234567890         @DESTINO: CONTA CORRENTE - 456/9876543210        @VALOR TRANSFERENCIA: 123,456                    ",
-    "origem" : {
-      "nome" : "Jean-Luc Picard"
-    },
-    "destino" : {
-      "nome" : "William Thomas Riker"
-    }
-  },
-  "InfTransacao" : {
-    "cdProc" : "029100",
-    "mensagemCliente" : "Esta &eacute; uma mensagem para exibi&ccedil;&atilde;o em tela.",
-    "nsu" : "000080247206",
-    "codMoeda" : "986",
-    "codOperadora" : "00000000914",
-    "dataLocal" : "1122",
-    "errorMessage" : "",
-    "valor" : "5000",
-    "horaLocal" : "151032",
-    "nsuResposta" : "820",
-    "dataHora" : "1122151032"
-  },
-  "Cripto" : {
-    "hash" : "hash"
-  },
-  "Terminal" : {
-    "codEstab" : "000000000742673",
-    "tipo" : "008",
-    "id" : "05100004"
-  }
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
